<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_md">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    style="@style/AvatarContact"
                    android:text="@string/avatar_izzat_text" />

                <LinearLayout
                    style="@style/LinearLayoutTextViewsContact">

                    <TextView
                        style="@style/TextViewContactItemTextAccent"
                        android:text="@string/name_izzat_text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ic_favorite_0_image_view"
                style="@style/IconFavoriteContact"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_md">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    style="@style/AvatarContact"
                    android:text="@string/avatar_maksim_text" />

                <LinearLayout
                    style="@style/LinearLayoutTextViewsContact">

                    <TextView
                        style="@style/TextViewContactItemTextAccent"
                        android:text="@string/name_maksim_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0707550607" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ic_favorite_1_image_view"
                style="@style/IconFavoriteContact"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_md">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    style="@style/AvatarContact"
                    android:text="@string/avatar_eles_text" />

                <LinearLayout
                    style="@style/LinearLayoutTextViewsContact">

                    <TextView
                        style="@style/TextViewContactItemTextAccent"
                        android:text="@string/name_eles_text"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0707564738" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ic_favorite_2_image_view"
                style="@style/IconFavoriteContact"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_md">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    style="@style/AvatarContact"
                    android:text="@string/avatar_niztana_text"/>

                <LinearLayout
                    style="@style/LinearLayoutTextViewsContact">

                    <TextView
                        style="@style/TextViewContactItemTextAccent"
                        android:text="@string/name_niztana_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0550546404" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ic_favorite_3_image_view"
                style="@style/IconFavoriteContact"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_md">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <TextView
                    style="@style/AvatarContact"
                    android:text="@string/avatar_aiana_text" />

                <LinearLayout
                    style="@style/LinearLayoutTextViewsContact">

                    <TextView
                        style="@style/TextViewContactItemTextAccent"
                        android:text="@string/name_aiana_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0508080501" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/ic_favorite_4_image_view"
                style="@style/IconFavoriteContact"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>