<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ShowContactActivity"
    tools:showIn="@layout/activity_show_contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.cardview.widget.CardView style="@style/CardViewContactItem">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/IconContactItem"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/margin_sm"
                        android:padding="@dimen/ic_padding"
                        android:src="@drawable/ic_call_blue"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewContactItemTextAccent"
                            android:text="@string/phone" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_text" />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    style="@style/IconContactItem"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_sm"
                    android:padding="@dimen/ic_padding"
                    android:src="@drawable/ic_chat_grey"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/CardViewContactItem">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    style="@style/IconContactItem"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_sm"
                    android:padding="@dimen/ic_padding"
                    android:src="@drawable/ic_email_blue"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewContactItemTextAccent"
                        android:text="@string/email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_text" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView style="@style/CardViewContactItem">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    style="@style/IconContactItem"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margin_sm"
                    android:padding="@dimen/ic_padding"
                    android:src="@drawable/ic_share_blue"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewContactItemTextAccent"
                        android:text="@string/send_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_text" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>